# GoIT_Web_homework_5

./: README.md  pyproject.toml
server/: cache.json  main.py  table.jinja
