[tool.poetry]
name = "goit-web-homework-5"
version = "0.1.0"
description = ""
authors = ["Vasyl Boliukh <89039235+Vskesha@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^12.0"
names = "^0.3.0"
aiohttp = "^3.9.1"
jinja2 = "^3.1.2"
aiopath = "0.6.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
